--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,16 @@
   "author": "Krzysztof Osiniak krzysztofosiniak37@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "@apollo/server": "^4.11.0",
     "express": "^4.21.0",
-    "graphql-http": "^1.22.1",
+    "graphql": "^16.9.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/node": "^22.7.5",
     "typescript": "^5.6.2"
   }
 }
